@@ -606,7 +606,17 @@
 					<div class="text">planicrand</div>
 				</td>
 			</tr>
-			
+			<tr>
+				<td>
+					&nbsp;&nbsp;
+				</td>
+				<td height=30>
+					<div class="text">French:</div>
+				</td>
+				<td>
+					<div class="text">Yanuut</div>
+				</td>
+			</tr>
 		
 		</table>	
 	</div>
